# pycronometer

./: .gitignore  example.py  readme.md  setup.cfg  setup.py
examples/: example.py
pycronometer/: __init__.py  client.py
