[metadata]
name = pycronometer
version = 0.0.1
author = Artis Lismanis
author_email = info@insightsdude.uk
description = A Python client implementation for downloading account data from https://cronometer.com/.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artislismanis/pycronometer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
packages = pycronometer
